deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      serviceAccountName: homepage-service-account  # Add this line to use the ServiceAccount
      containers:
        - name: homepage
          image: docker.io/keanuwatts/theclusterflux:homepage
          imagePullPolicy: Always
      imagePullSecrets:
        - name: dockerhub-secret
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  selector:
    app: homepage
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # Add rewrite target annotation to handle Prometheus paths
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - homepage.theclusterflux.com
    secretName: theclusterflux
  rules:
  - host: homepage.theclusterflux.com
    http:
      paths:
      # Add specific path for Prometheus with correct service name
      - path: /prometheus(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: monitoring-stack-kube-prom-prometheus
            port:
              number: 9090
      # Keep general path for homepage
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage
            port:
              number: 8080
